# PathTracer

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
cimg/: CImg.h
src/: main.cpp  material.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  object_container.cpp  object_container.hpp  scene.cpp  scene.hpp  utils.cpp  utils.hpp
